# Mai-TP-api

./: .gitignore  README.md  main.py  pyproject.toml
app/enums/divingfish/: gametype.py
app/routes/v1/: __init__.py
app/routes/v1/divingfish/: __init__.py
app/routes/v1/dxrating/: __init__.py
app/schema/divingfish/: request.py  response.py
app/service/divingfish/: __init__.py  mai.py
app/utils/os/: path.py
cfg/: config.py
