[project]
name = "mai-tp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofile>=3.9.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "tenacity>=9.1.2",
    "tortoise-orm>=0.25.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.2",
]
